--- a/dailyquest/style.css
+++ b/dailyquest/style.css
@@ -350,7 +350,7 @@ body {
 .new-quest-btn {
     padding: 8px 18px; 
     border-radius: 50px;
-    color: rgb(247, 12, 12);
+    color: white;
     border: none;
     font-size: 0.95rem; 
     font-weight: 500;
